--- a/new-donor.html
+++ b/new-donor.html
@@ -68,15 +68,20 @@
       color: #555;
     }
 
-    .section-divider {
-      margin: 60px 0 20px;
-      border-top: 2px solid #ccc;
+    .redirect-message {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 1em;
     }
 
-    .welcome {
+    .redirect-message a {
+      color: #4a148c;
       font-weight: bold;
-      color: green;
-      margin-bottom: 10px;
+      text-decoration: none;
+    }
+
+    .redirect-message a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -122,43 +127,12 @@
         Need help? Contact our support at <a href="mailto:support@feedconnect.org">support@feedconnect.org</a>
       </div>
     </form>
+
+    <div class="redirect-message">
+      Already have an account? <a href="existing-user.html">Click here to login</a>
+    </div>
   </div>
-
-  <!-- Divider -->
-  <div class="section-divider"></div>
-
-  <!-- Existing User Login -->
-  <div class="form-container">
-    <h2>Existing User</h2>
-    <form id="existingUserForm">
-      <label for="existingEmail">Enter Your Email</label>
-      <input type="email" id="existingEmail" name="existingEmail" required />
-
-      <!-- This part will be dynamically updated after email verification -->
-      <div class="welcome" id="welcomeMessage" style="display:none;">
-        Welcome back, <span id="userName">[User]</span>!
-      </div>
-
-      <label for="foodQuantity">Enter Food Quantity</label>
-      <input type="text" id="foodQuantity" name="foodQuantity" placeholder="e.g., 20 boxes" required />
-
-      <label for="existingLocation">Location (Google Maps Link)</label>
-      <input type="url" id="existingLocation" name="existingLocation" required />
-
-      <button type="submit">Submit Donation</button>
-    </form>
-  </div>
-
-  <script>
-    // Simulated email verification for demo
-    document.getElementById("existingUserForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const email = document.getElementById("existingEmail").value;
-      const userName = email.split("@")[0]; // Demo: extract name from email
-      document.getElementById("welcomeMessage").style.display = "block";
-      document.getElementById("userName").textContent = userName.charAt(0).toUpperCase() + userName.slice(1);
-    });
-  </script>
 
 </body>
 </html>
+
