--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
     <img src="https://thumbs.dreamstime.com/b/donation-bins-canned-food-drive-surrounded-cheerful-volunteers-cartoon-style-flat-design-illustration-349810359.jpg" alt="Food donation banner" class="hero-image">
 
     <div class="buttons">
-      <a href="new-donor.html" class="btn">Donor Registration (New)</a>
-      <a href="existing-donor.html" class="btn">Donor Login (Existing)</a>
-      <a href="new-org.html" class="btn">Org Registration (New)</a>
-      <a href="existing-org.html" class="btn">Org Login (Existing)</a>
+      <a href="new-donor.html" class="btn">Donor Registration</a>
+      <a href="new-org.html" class="btn">Organization Registration</a>
       <a href="individual-donate.html" class="btn">Donate as Individual</a>
       <a href="volunteer.html" class="btn">Register as Volunteer</a>
       <a href="#about" class="btn">About Us</a>
