--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
   <section id="volunteer">
     <h2 class="section-title">Volunteer</h2>
     <p>
-      Volunteers are the lifeline of FeedConnect. Help us pick up food from donors and deliver it to registered NGOs and shelters. You can register your interest by clicking the button below:
+      Volunteers are the lifeline of FeedConnect.You can register your interest by clicking the button below:
     </p>
-    <hr>
     <a href="volunteer.html" class="btn">Join as Volunteer</a>
   </section>
 
