--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <div class="buttons">
       <a href="new-donor.html" class="btn">Donor Registration</a>
-      <a href="new-org.html" class="btn">Organization Registration</a>
+      <a href="acceptor.html" class="btn">Organization Registration</a>
       <a href="individual-donate.html" class="btn">Donate as Individual</a>
       <a href="#about" class="btn">About Us</a>
     </div>
