--- a/existing-user.html
+++ b/existing-user.html
@@ -8,14 +8,14 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to right, #fff3e0, #e0f7fa);
+      background: linear-gradient(to right, #ede7f6, #f3e5f5);
       color: #333;
       padding: 30px;
     }
 
     h1 {
       text-align: center;
-      color: #00695c;
+      color: #6a1b9a;
       margin-bottom: 30px;
     }
 
@@ -29,7 +29,7 @@
     }
 
     h2 {
-      color: #00796b;
+      color: #4a148c;
       margin-bottom: 20px;
       text-align: center;
     }
@@ -49,18 +49,17 @@
     }
 
     button {
-      background: #00796b;
+      background: #4a148c;
       color: white;
       padding: 12px 25px;
       border: none;
       border-radius: 25px;
       cursor: pointer;
       font-size: 1em;
-      transition: 0.3s ease;
     }
 
     button:hover {
-      background: #004d40;
+      background: #311b92;
     }
 
     .welcome {
