--- a/individual-donate.html
+++ b/individual-donate.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Donate as an Individual - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #512da8, #673ab7);
+      margin: 0;
+      padding: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #fff;
+    }
+
+    .container {
+      max-width: 700px;
+      background: #ffffff;
+      padding: 50px;
+      border-radius: 20px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+      text-align: center;
+    }
+
+    .container h1 {
+      font-size: 32px;
+      color: #512da8;
+      margin-bottom: 30px;
+    }
+
+    .email-link {
+      font-size: 22px;
+      display: inline-block;
+      margin-top: 15px;
+      color: #388e3c;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .email-link:hover {
+      text-decoration: underline;
+      color: #2e7d32;
+    }
+
+    .back-button {
+      margin-top: 40px;
+      display: inline-block;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 25px;
+      background: linear-gradient(to right, #43a047, #388e3c);
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background 0.3s;
+      text-decoration: none;
+    }
+
+    .back-button:hover {
+      background: linear-gradient(to right, #388e3c, #2e7d32);
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>To Donate as an Individual,<br>Contact Us At:</h1>
+    <a class="email-link" href="https://mail.google.com/mail/?view=cm&fs=1&to=feedconnect@gmail.com" target="_blank">
+      feedconnect@email.com
+    </a>
+    <br>
+    <a class="back-button" href="index.html">← Back to Home</a>
+  </div>
+</body>
+</html>
 
