--- a/individual-donate.html
+++ b/individual-donate.html
@@ -68,8 +68,8 @@
 <body>
   <div class="container">
     <h1>To Donate as an Individual,<br>Contact Us At:</h1>
-    <a class="email-link" href="https://mail.google.com/mail/?view=cm&fs=1&to=feedconnect@gmail.com" target="_blank">
-      feedconnect@email.com
+    <a class="email-link" href="https://mail.google.com/mail/?view=cm&fs=1&to=feedconnect1722@gmail.com" target="_blank">
+      feedconnect1722@gmail.com
     </a>
     <br>
     <a class="back-button" href="index.html">← Back to Home</a>
