--- a/new-donor.html
+++ b/new-donor.html
@@ -81,7 +81,7 @@
           location: document.getElementById("location").value
         };
 
-        fetch("https://script.google.com/macros/s/YOUR_SCRIPT_ID_HERE/exec", {
+        fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxxcCH2qLvghw-MXSZWfPuxvsdjf1S1wY9xjypSOvIEHOh_cu2rTF0CwNnYKveIR5JY/exec/exec", {
           method: "POST",
           body: JSON.stringify(payload),
           headers: { "Content-Type": "application/json" }
@@ -102,5 +102,3 @@
   </script>
 </body>
 </html>
-
-
